completed comment form

--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -362,50 +362,40 @@
     </div>
 </div>
 <section>
-    <div class="container-fluid">
+    <div class="container padding">
         <div class="service col-12">
             <h5>Greensource is run by awesome people</h5>
                 <p>Leadership Team</p>
                     <hr />
         </div>
-        <div class="row team-area owl-carousel owl-theme" id="team">
+        <div class="row team-area owl-carousel owl-theme" id="team-one">
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="1.2s" data-wow-offset="10">
-                    <img src="{% static 'images/ceo.png' %}" alt="CEO">
+                    <img src="{% static 'images/ceo.png' %}" alt="C.E.O">
                     <div class="team-text">
                         <h5>Omogbule Joseph</h5>
-                        <p>CEO</p>
+                        <p>C.E.O</p>
                     </div>
                 </div>
             </div>
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/george.png' %}" alt="Male Business lead">
-                    <div class="team-text">
-                        <h5>George Seun</h5>
-                        <p>Business Advisor</p>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/onifade.png' %}" alt="Marketing lead">
+                    <img src="{% static 'images/onifade.png' %}" alt="Marketing Lead">
                     <div class="team-text">
                         <h5>Onifade Dolapo</h5>
-                        <p>Marketing / Sales</p>
+                        <p>MArketing Lead</p>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
-                    <!-- <img src="{% static 'images/george.png' %}" alt="Tech lead"> -->
+                <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
+                    <img src="{% static 'images/tola.png' %}" alt="Project Manager">
                     <div class="team-text">
-                        <h5>Afolabi Ahmed</h5>
-                        <p>ICT</p>
+                        <h5>Adeyemi Tola</h5>
+                        <p>Project Manager</p>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
