--- a/greensource_pages/templates/greensource_pages/company-profile.html
+++ b/greensource_pages/templates/greensource_pages/company-profile.html
@@ -1,6 +1,6 @@
 {% extends 'base_layout.html' %}
 {% load static %}
-{% block title %}{{ block.super }} Comapany Profile{% endblock %}
+{% block title %}{{ block.super }} GreenSource Energy Profile{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
