--- a/greensource_pages/templates/greensource_pages/energy-management.html
+++ b/greensource_pages/templates/greensource_pages/energy-management.html
@@ -9,7 +9,7 @@ menu-active
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
             <h1>ENERGY STORAGE SOLUTION</h1>
-            <h2>Meet your energy demands</h2>
+            <h2></h2>
         </div>
     </div>
 </div>
@@ -27,36 +27,18 @@ menu-active
 <div class="container-fluid padding">
     <div class="light row padding">
         <ul class="list-group col-lg-4">
-            <li class="list-group-item">
-                <a href="{% url 'services' %}">
-                    <i class="fas fa-caret-right"></i> All Services</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'solar_design' %}">
-                    <i class="fas fa-caret-right"></i> Design / Installation</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'electrical_design' %}">
-                    <i class="fas fa-caret-right"></i> Street lighting</a>
-            </li>
-            <li class="list-group-item  list-group-item-success">
-                <a href="{% url 'energy_management' %}">
-                    <i class="fas fa-caret-right"></i> Energy Storage Solutions</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'project_management' %}">
-                    <i class="fas fa-caret-right"></i> Energy Management</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'hvac' %}">
-                    <i class="fas fa-caret-right"></i> System Upgrade</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'maintenance_service' %}">
-                    <i class="fas fa-caret-right"></i> Retrofit / Maintenance</a>
-            </li>
+            <li class="list-group-item"><a href="{% url 'services' %}"><i class="fas fa-caret-right"></i> All Services</a></li>
+            <li class="list-group-item"><a href="{% url 'solar_design' %}"><i class="fas fa-caret-right"></i> Residential Solar</a></li>
+            <li class="list-group-item"><a href="{% url 'commercial_solar' %}"><i class="fas fa-caret-right"></i> Commercial Solar</a></li>
+            <li class="list-group-item"><a href="{% url 'off_grid_solar' %}"><i class="fas fa-caret-right"></i> Off-Grid Solar</a></li>
+            <li class="list-group-item"><a href="{% url 'electrical_design' %}"><i class="fas fa-caret-right"></i> Solar Lighting</a></li>
+            <li class="list-group-item"><a href="{% url 'solar_water_pump' %}"><i class="fas fa-caret-right"></i> Solar Water Pump</a></li>
+            <li class="list-group-item list-group-item-success"><a href="{% url 'energy_management' %}"><i class="fas fa-caret-right"></i> Energy Storage Solution</a></li>
+            <li class="list-group-item"><a href="{% url 'project_management' %}"><i class="fas fa-caret-right"></i> Energy Management</a></li>
+            <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> System Upgrade</a></li>
+            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Maintenance</a></li>
         </ul>
-        <div class="cut col-lg-8">
+        <div class="col-lg-8">
             <img src="{% static 'images/battery.jpg' %}" />
         </div>
     </div>
@@ -79,7 +61,7 @@ menu-active
                 <strong>Our aim is always for our customer's financial satisfaction, while ensuring we can achieve thier long-term energy goals.</strong>
             </p>
         </div>
-        <div class="sub-section row">
+        <!-- <div class="sub-section row">
             <div class="body col-xs-12 col-md-6 col-lg-4">
                 <div>
                     <i class="fas fa-balance-scale"></i>
@@ -106,7 +88,7 @@ menu-active
                 <p class="sub">Storage analysis diagonise energy storage banks so you determine the performance, health and usuage of your energy stoarge 
                     system and know its useful life.</p>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 <div class="container-fluid">
@@ -118,7 +100,7 @@ menu-active
                 <li>Battery Replacement</li>
                 <li>Battery Equalization</li>
                 <li>Storage Troubleshooting</li>
-                <li>Installation of ultra capacitors</li>
+                <li>Installation of super capacitors</li>
             </ol>
         </div>
         <div class="order-list col-lg-5 col-md-6 col-xs-12">
