--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -28,14 +28,58 @@ menu-active
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="3s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-solar-panel"></i>
+                            <i class="fas fa-home"></i>
                             <h3>
-                                <a href="{% url 'solar_design' %}">design / installation</a>
+                                <a href="{% url 'solar_design' %}">residential solar</a>
                             </h3>
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/design-installation.jpeg' %}" alt="rooftop solar" />
+                        <img src="{% static 'images/residential-solar.jpeg' %}" alt="rooftop solar" />
+                        <div class="overlay">
+                            <div class="box">
+                                <div class="content">
+                                    <div class="dotted"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                <div class="single-service-style-one wow fadeIn" data-wow-duration="3s" data-wow-delay="0.2s" data-wow-offset="10">
+                    <div class="top-box">
+                        <div class="inner-content">
+                            <i class="fas fa-industry"></i>
+                            <h3>
+                                <a href="{% url 'commercial_solar' %}">commercial solar</a>
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="image-block">
+                        <img src="{% static 'images/commercial solar.jpg' %}" alt="rooftop solar" />
+                        <div class="overlay">
+                            <div class="box">
+                                <div class="content">
+                                    <div class="dotted"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                <div class="single-service-style-one wow fadeIn" data-wow-duration="3s" data-wow-delay="0.2s" data-wow-offset="10">
+                    <div class="top-box">
+                        <div class="inner-content">
+                            <i class="fas fa-solar-panel"></i>
+                            <h3>
+                                <a href="{% url 'off_grid_solar' %}">off-grid solar</a>
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="image-block">
+                        <img src="{% static 'images/offgrid solar.jpg' %}" alt="rooftop solar" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -52,12 +96,12 @@ menu-active
                         <div class="inner-content">
                             <i class="far fa-lightbulb"></i>
                             <h3>
-                                <a href="{% url 'electrical_design' %}">street lighting</a>
+                                <a href="{% url 'electrical_design' %}">solar lighting</a>
                             </h3>
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/street-light.jpeg' %}" alt="solar street-light" />
+                        <img src="{% static 'images/solar-light.jpeg' %}" alt="solar street-light" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -68,6 +112,29 @@ menu-active
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                <div class="single-service-style-one wow fadeIn" data-wow-duration="3s" data-wow-delay="0.2s" data-wow-offset="10">
+                    <div class="top-box">
+                        <div class="inner-content">
+                            <i class="fas fa-water"></i>
+                            <h3>
+                                <a href="{% url 'solar_water_pump' %}">Solar water pump</a>
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="image-block">
+                        <img src="{% static 'images/solar-pump.jpeg' %}" alt="solar water pump" />
+                        <div class="overlay">
+                            <div class="box">
+                                <div class="content">
+                                    <div class="dotted"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="9s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
@@ -101,7 +168,7 @@ menu-active
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/energy.jpg' %}" alt="energy saving bulb" />
+                        <img src="{% static 'images/energy-mgt.jpg' %}" alt="energy saving bulb" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -138,14 +205,14 @@ menu-active
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="9s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-toolbox"></i>
+                            <i class="fas fa-tools"></i>
                             <h3>
                                 <a href="{% url 'maintenance_service' %}">maintenance</a>
                             </h3>
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/modules.jpeg' %}" alt="solar panel maintenance" />
+                        <img src="{% static 'images/maintenance.jpg' %}" alt="solar panel maintenance" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
