--- a/templates/403.html
+++ b/templates/403.html
@@ -9,8 +9,9 @@
     <meta name="audience" content="all" />
     <meta name="distribution" content="global" />
     <meta name="robots" content="all" />
-    <meta name="description" content="Professional Renewable energy and Management services Mowe-Ofada Ogun State" />
-    <meta name="keywords" content="Professional Solar design,Professional solar installation, solar component sales, solar maintenance services, inspection, energy analysis, battery backup installation, customer support, consultancy, solar systems troubleshooting"
+    <meta name="description" content="An end-to-end, innovative solar energy installation company, providing cutting edge renewable energy solution services" />
+    <meta name="keywords" content="solar system, solar panel, solar energy, solar, solar inverter, solar panel price in nigeria, solar battery, solar street light, 
+    solar power system, solar inverter installation, solar lighting system, renewable energy, solar companies in lagos/ogun, solar business in nigeria, solar quotes, green energy, energy sources, alternative energy"
     />
     <title>403</title>
     <link rel="stylesheet" href="{% static 'home.css' %}" %} type="text/css" />
