--- a/contact_us/templates/contact_us/contact.html
+++ b/contact_us/templates/contact_us/contact.html
@@ -31,7 +31,7 @@ menu-active
                         <script type="text/javascript">document.write('\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
                     </a>
             </p>
-            <p><i class="fas fa-phone"></i>+(234) 8029442697</p>
+            <p><i class="fas fa-phone"></i>(234)802 944 2697 <br /> (234)807 606 8609</p>
         </div>
                 <div class="map col-lg-6 col-xs-12 col-md-9">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7922.741452898637!2d3.433366268485239!3d6.84608399012105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bc7b12aa0619b%3A0x668d6d2407416eeb!2sGREENSOURCE+ENGINEERING+CONSULT!5e0!3m2!1sen!2sng!4v1554279134001!5m2!1sen!2sng" width="800" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
