--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -27,36 +27,18 @@ menu-active
 <div class="container-fluid padding">
     <div class="light row padding">
         <ul class="list-group col-lg-4">
-            <li class="list-group-item">
-                <a href="{% url 'services' %}">
-                    <i class="fas fa-caret-right"></i> All Services</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'solar_design' %}">
-                    <i class="fas fa-caret-right"></i> Design / Installation</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'electrical_design' %}">
-                    <i class="fas fa-caret-right"></i> Street lighting</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'energy_management' %}">
-                    <i class="fas fa-caret-right"></i> Energy Storage Solutions</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'project_management' %}">
-                    <i class="fas fa-caret-right"></i> Energy Management</a>
-            </li>
-            <li class="list-group-item  list-group-item-success">
-                <a href="{% url 'hvac' %}">
-                    <i class="fas fa-caret-right"></i> System Upgrade</a>
-            </li>
-            <li class="list-group-item">
-                <a href="{% url 'maintenance_service' %}">
-                    <i class="fas fa-caret-right"></i> Retrofit / Maintenance</a>
-            </li>
+            <li class="list-group-item"><a href="{% url 'services' %}"><i class="fas fa-caret-right"></i> All Services</a></li>
+            <li class="list-group-item"><a href="{% url 'solar_design' %}"><i class="fas fa-caret-right"></i> Residential Solar</a></li>
+            <li class="list-group-item"><a href="{% url 'commercial_solar' %}"><i class="fas fa-caret-right"></i> Commercial Solar</a></li>
+            <li class="list-group-item"><a href="{% url 'off_grid_solar' %}"><i class="fas fa-caret-right"></i> Off-Grid Solar</a></li>
+            <li class="list-group-item"><a href="{% url 'electrical_design' %}"><i class="fas fa-caret-right"></i> Solar Lighting</a></li>
+            <li class="list-group-item"><a href="{% url 'solar_water_pump' %}"><i class="fas fa-caret-right"></i> Solar Water Pump</a></li>
+            <li class="list-group-item"><a href="{% url 'energy_management' %}"><i class="fas fa-caret-right"></i> Energy Storage Solution</a></li>
+            <li class="list-group-item"><a href="{% url 'project_management' %}"><i class="fas fa-caret-right"></i> Energy Management</a></li>
+            <li class="list-group-item list-group-item-success"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> System Upgrade</a></li>
+            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Maintenance</a></li>
         </ul>
-        <div class="cut col-lg-8">
+        <div class="col-lg-8">
             <img src="{% static 'images/inverter.jpg' %}" alt="inverter" />
         </div>
     </div>
@@ -70,7 +52,7 @@ menu-active
                 and also provide you with great services on all aspects of your system upgrade.
             </p>
         </div>
-        <div class="sub-section row">
+        <!-- <div class="sub-section row">
                 <div class="body col-xs-12 col-md-6 col-lg-4">
                     <div>
                         <i class="fas fa-walking"></i>
@@ -95,7 +77,7 @@ menu-active
                     <p class="sub">Identifies detailed account of energy use, qualitative study, detailed investments, operations and maintenance
                         cost and analysis of investment.</p>
                 </div>
-            </div>
+            </div> -->
     </div>
 </div>
 <div class="container padding">
