--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -1,6 +1,6 @@
 {% extends 'base_layout.html' %}
 {% load static %}
-{% block title %}{{ block.super }} Our Team{% endblock %}
+{% block title %}{{ block.super }} Green energy professionals{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
@@ -21,75 +21,241 @@
         <li class="breadcrumb-item active" aria-current="page">Our-Team</li>
     </ol>
 </nav>
-<section>
-    <div class="container-fluid">
-        <div class="row padding">
-            <div class="team-area-one row">
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="1.2s" data-wow-offset="10">
+<section id="team">
+    <div class="team-box-container">
+        <div class="member-box member-1">
+            <div class="member-img"> 
+                <img src="{% static 'images/ceo.png' %}" alt="CEO">
+            </div>
+            <div class="member-name">
+                <h3>OLUMIDE OMOGBULE</h3>
+                <h5>MD/CEO</h5>
+            </div>
+        </div>
+
+        <div class="member-box member-2">  
+            <div class="member-img">
+                <img src="{% static 'images/onifade.png' %}" alt="Male Business lead">
+            </div>
+            <div class="member-name">
+                <h3>DOLAPO ONIFADE</h3>
+                <h5>Marketing/Business Lead</h5>
+            </div>
+        </div>
+        
+        <div class="member-box member-3">
+            <div class="member-img">
+                <img src="{% static 'images/tola.png' %}" alt="Male Business lead">
+            </div>
+            <div class="member-name">
+                <h3>TOLA ADEYEMI</h3>
+                <h5>Project Manager</h5>
+            </div>
+        </div>
+       
+        <!-- <div class="member-box member-4">
+            <div class="member-img">
+            <img src="{% static 'images/george.png' %}" alt="Male Business lead">
+            </div>
+            <div class="member-name">
+                <h3>Afolabi Ahmed</h3>
+                <h5>Devops/Tech</h5>
+            </div>
+        </div>
+        
+        <div class="member-box member-5">
+            <div class="member-img">
+                <img src="{% static 'images/yussuf.png' %}" alt="PV Engineer">
+            </div>
+            <div class="member-name">
+                <h3>Yussuf Adebayo</h3>
+                <h5>Lead Engineer</h5>
+            </div>
+        </div>
+        
+        <div class="member-box member-6">
+            <div class="member-img">
+                <img src="images/t6-a.jpg">
+            </div>
+            <div class="member-name">
+                <h3>Iyanu Oluwa</h3>
+                <h5>PV Engineer</h5>
+            </div>
+        </div> -->
+        
+        <div class="detail-box-1">
+            <div class="member-detail-box">  
+                <div class="detail-box-img">
                     <img src="{% static 'images/ceo.png' %}" alt="CEO">
-                    <div class="team-text">
-                        <h5>Omogbule Joseph</h5>
-                        <p>CEO</p>
+                </div>
+                <div class="detail-box-text">
+                    <a href="javascript:void(0);" class="cancel">
+                        <i class="fas fa-times"></i>
+                    </a>
+                    <h4 class="detail-name">Olumide Omogbule - B.Sc, Dip. FM</h4>
+                    <div class="member-social-links">
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
                     </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/george.png' %}" alt="Male Business lead">
-                    <div class="team-text">
-                        <h5>George Seun</h5>
-                        <p>Business Advisor</p>
-                    </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/onifade.png' %}" alt="Marketing lead">
-                    <div class="team-text">
-                        <h5>Onifade Dolapo</h5>
-                        <p>Marketing / Sales</p>
-                    </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
-                    <!-- <img src="{% static 'images/george.png' %}" alt="Tech lead"> -->
-                    <div class="team-text">
-                        <h5>Afolabi Ahmed</h5>
-                        <p>ICT</p>
-                    </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
-                        <img src="{% static 'images/tola.jpg' %}" alt="Tech lead">
-                        <div class="team-text">
-                            <h5>Tola Adeyemi</h5>
-                            <p>Lead Engineer</p>
-                        </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
-                        <img src="{% static 'images/yussuf.png' %}" alt="Tech lead">
-                        <div class="team-text">
-                            <h5>Yussuf Ahmed</h5>
-                            <p>Engineer</p>
-                        </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
-                        <!-- <img src="{% static 'images/george.png' %}" alt="Tech lead"> -->
-                        <div class="team-text">
-                            <h5>Afolabi Ahmed</h5>
-                            <p>Engineer</p>
-                        </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
-                        <!-- <img src="{% static 'images/george.png' %}" alt="Tech lead"> -->
-                        <div class="team-text">
-                            <h5>Afolabi Ahmed</h5>
-                            <p>Engineer</p>
-                        </div>
-                </div>
-                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
-                    <!-- <img src="{% static 'images/george.png' %}" alt="Tech lead"> -->
-                    <div class="team-text">
-                        <h5>Afolabi Ahmed</h5>
-                        <p>Engineer</p>
-                    </div>
+                    <h5 class="position">Position: MD/CEO</h5>
+                    <p>Olumide Omogbule is a graduate of Environmental Engneering from Obafemi Awolowo University lle-Ife.
+                       He oversees the operations and implementation of company strategy. He has over 5 years of experience in
+                       the renewable energy industry and 2 years of experience in Facility Management.
+                    </p>
+                    <a href="#" class="view-work-btn">View Profile</a>
                 </div>
             </div>
         </div>
+      
+        <div class="detail-box-2">
+            <div class="member-detail-box">
+                <div class="detail-box-img">
+                    <img src="{% static 'images/onifade.png'  %}">
+                </div>
+                <div class="detail-box-text">
+                    <a href="javascript:void(0);" class="cancel">
+                        <i class="fas fa-times"></i>
+                    </a>
+                    <h4 class="detail-name">Dolapo Onifade</h4>
+                    <div class="member-social-links">
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                    </div>
+                    <h5 class="position">Position: Marketing/Business Lead</h5>
+                    <p>Dolapo Onifade is an undergraduate student of the University of Lagos pursuing a degree in European
+                        languages and Intergrated studies. She has a deep knowledge in sales, content creation and promotion, 
+                        marketing campaign development. She is a certified digital marketer.
+                    </p>
+                    <a href="#" class="view-work-btn">View Profile</a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="detail-box-3">
+            <div class="member-detail-box">
+                <div class="detail-box-img">
+                    <img src="{% static 'images/tola.png'  %}">
+                </div>
+                <div class="detail-box-text">
+                    <a href="javascript:void(0);" class="cancel">
+                        <i class="fas fa-times"></i>
+                    </a>
+                    <h4 class="detail-name">Tola Adeyemi - B.Eng</h4>
+                    <div class="member-social-links">
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                    </div>
+                    <h5 class="position">Position: Project Manager</h5>
+                    <p>Tola Adeyemi is a graduate of Petroleum Engineering from the University of Ibadan. He is a renewable energy
+                        enthusiast with over 3 years of experience as a certified solar PV instructor and Engineer, passionate
+                        about alternative form of energy. He has coordinated a high number of solar projects within Nigeria 
+                    </p>
+                    <a href="#" class="view-work-btn">View Profile</a>
+                </div>
+            </div>
+        </div>
+      
+        <div class="detail-box-4">
+            <div class="member-detail-box">
+                <div class="detail-box-img">
+                    <img src="{% static 'images/afolabi.png'  %}">
+                </div>
+                <div class="detail-box-text">
+                    <a href="javascript:void(0);" class="cancel">
+                        <i class="fas fa-times"></i>
+                    </a>
+                    <h4 class="detail-name">Afolabi Ahmed - B.Sc</h4>
+                    <div class="member-social-links">
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                    </div>
+                    <h5 class="position">Position: Devops/Tech</h5>
+                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's
+                        possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with
+                        full stack development skills on the side. Share your ideas with him and he will make it happen.
+                    </p>
+                    <a href="#" class="view-work-btn">View Profile</a>
+                </div>
+            </div>
+        </div>
+       
+        <div class="detail-box-5">
+            <div class="member-detail-box">
+                <div class="detail-box-img">
+                    <img src="{% static 'images/yussuf.png' %}" alt="PV Engineer">
+                </div>
+                <div class="detail-box-text">
+                    <a href="javascript:void(0);" class="cancel">
+                        <i class="fas fa-times"></i>
+                    </a>
+                    <h4 class="detail-name">Yussuf Adebayo - B.Ed</h4>
+                    <div class="member-social-links">
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                    </div>
+                    <h5 class="position">Position: Lead Engineer</h5>
+                    <p>Yussuf Adebayo is a graduate of Educational Management from the University of Ilorin. He s also an
+                        associate member of the assocation of accountacy bodies in west Africa (ABWA). An Instructor on solar energy 
+                        systems and a certified PV Designer and Installer with over 3 years of experience.  
+                    </p>
+                    <a href="#" class="view-work-btn">View Profile</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="detail-box-6">
+            <div class="member-detail-box">
+                <div class="detail-box-img">
+                    <img src="{% static 'images/engineer.png'  %}">
+                </div>
+                <div class="detail-box-text">
+                    <a href="javascript:void(0);" class="cancel">
+                        <i class="fas fa-times"></i>
+                    </a>
+                    <h4 class="detail-name">Iyanu Oluwa</h4>
+                    <div class="member-social-links">
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                    </div>
+                    <h5 class="position">Position: PV Engineer</h5>
+                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's
+                        possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with
+                        full stack development skills on the side. Share your ideas with him and he will make it happen.
+                    </p>
+                    <a href="#" class="view-work-btn">View Profile</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
+
+
+
+
+
 {% endblock %}
