--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -30,7 +30,7 @@ menu-active
                 <img src="{{ post.thumb.url }}" class="card-img-top" alt="blog image" />
                 <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
                 <div class="card-body">
-                    <small class="text-muted"><i class="fas fa-user"></i> Admin  &nbsp; &nbsp;<i class="far fa-heart"></i> 2&nbsp; &nbsp;<i class="far fa-comments"></i> 15</small>
+                    <small class="text-muted"><i class="fas fa-user"></i> Admin  &nbsp; &nbsp;<i class="far fa-heart"></i> 2&nbsp; &nbsp;<i class="far fa-comments"></i> {{ count }}</small>
                     <h5 class="card-title">{{post.short_description}}</h5>
                     <p class="card-text">
                         {{ post.body }}
@@ -58,6 +58,9 @@ menu-active
         <h6 class="post-header">comments</h6>
         <div class="post row">
             <div class="col-lg-8 col-md-12 col-xs-12">
+                {% if comments %}
+
+                {% for comment in comments %}
                 <div class="card card-white post">
                     <div class="post-heading">
                         <div class="float-left image">
@@ -65,72 +68,49 @@ menu-active
                         </div>
                         <div class="float-left meta">
                             <div class="title h5">
-                                <a href="#"><strong>Ryan Wood</strong></a> 
+                                <a href="#"><strong>{{ comment.name }}</strong></a> 
                                 <span>made a post</span>
                             </div>
-                            <h6 class="text-muted time">15 April 2020</h6>
+                            <h6 class="text-muted time">{{ comment.date }}</h6>
                         </div>
                     </div>
                     <div class="post-description">
-                        <p>Bootey is a gallery of free spinner resouces templates and utilities of bootstrap css html django codes for development purposes.</p>
+                        <p>{{ comment.content }}</p>
                     </div>
                 </div>
-           
-                <div class="card card-white post">
-                    <div class="post-heading">
-                        <div class="float-left image">
-                            <img src="{% static 'images/b02.jpg' %}" class="img-circle avatar" alt="img" />
-                        </div>
-                        <div class="float-left meta">
-                            <div class="title h5">
-                                <a href="#"><strong>john doe</strong></a>
-                                <span>made a post</span>
-                            </div>
-                            <h6 class="text-muted time">15 April 2020</h6>
-                        </div>
-                    </div>
-                    <div class="post-description">
-                        <p>Bootey is a gallery of free spinner resouces templates and utilities of bootstrap css html django codes for development purposes.</p>
-                    </div>
-                </div>
+                {% endfor %}
+                {% else %}
                 
-                 <div class="card card-white post">
-                    <div class="post-heading">
-                        <div class="float-left image">
-                            <img src="{% static 'images/b02.jpg' %}" class="img-circle avatar" alt="img" />
-                        </div>
-                        <div class="float-left meta">
-                            <div class="title h5">
-                                <a href="#"><strong>travis declan</strong></a>
-                                <span>made a post</span>
-                            </div>
-                            <h6 class="text-muted time">27 April 2020</h6>
-                        </div>
-                    </div>
-                    <div class="post-description">
-                        <p>Bootey is a gallery of free spinner resouces templates and utilities of bootstrap css html django codes for development purposes.</p>
-                    </div>
-                </div>
-                
+                <p>No comment!</p>
+
+                {% endif %}             
             </div>
             </div>
         </div>
         
         
 <div class="container padding">
-<h6 class="comment-header">leave a comment</h6>
-<div class="comment row padding">
-   <div class="form-row col-lg-8 col-md-12 col-xs-12">
-                <div class="col">
-                    <input type="text" class="form-control"  placeholder="Name">
-                </div>
-                <div class="col">
-                    <input type="email" class="form-control"  placeholder="Email">
-                </div>
-                <label for="Message"></label>
-                    <textarea type="text" rows="8" class="form-control" placeholder="Message" required></textarea>
-                    <button type="submit" class="form-control">Send Message</button>
+    <h6 class="comment-header">leave a comment</h6>
+    <form action="" method="POST">
+        <div class="comment row padding">
+
+            <div class="form-row col-lg-8 col-md-12 col-xs-12">
+
+                {% csrf_token %} {{ comment_form.as_p }}
+                <!-- <div class="col">
+                
+                {{ comment_form.name }}
             </div>
-</div>
+            <div class="col">
+                
+                {{ comment_form.email }}
+            </div>
+            <label for="Message"></label>
+            
+                {{ comment_form.content }} -->
+                <button type="submit" class="form-control">Send Message</button>
+            </div>
+        </div>
+    </form>
 </div>
 {% endblock %}
